expose java.utils, required by Gson, to make tests pass in JDK 17