@@ -156,6 +156,7 @@
             <configuration>
               <argLine>
                 --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.base/java.util=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
